--- a/requirements.yml
+++ b/requirements.yml
@@ -1,7 +1,7 @@
 ---
 roles:
-  - name: elliotweiser.osx-command-line-tools
-  - name: geerlingguy.dotfiles
+  # - name: geerlingguy.dotfiles
 
 collections:
-  - name: geerlingguy.mac
+  # - name: geerlingguy.mac
+  - name: community.general
