--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,31 +9,17 @@ on:
     - cron: "0 5 1,15 1-12 *"
 
 jobs:
-  # lint:
-  #   name: Lint
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Check out repository
-  #       uses: actions/checkout@v4
+  lint:
+    name: Lint
+    runs-on: macos-15
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-  #     - name: Install Ansible
-  #       run: sudo apt install ansible -y
-
-  #     - name: Install Ansible-Galaxy Requirements
-  #       run: ansible-galaxy collection install community.general
-
-  #     - name: Run ansible-lint
-  #       uses: ansible/ansible-lint@v24.12.2
-  #       with:
-  #         requirements_file: requirements.yml
-
-  # - name: Install test dependencies.
-  #   run: brew install ansible ansible-lint yamllint
-
-  # - name: Lint code.
-  #   run: |
-  #     yamllint .
-  #     ansible-lint
+      - name: Run ansible-lint
+        uses: ansible/ansible-lint@v24.12.2
+        with:
+          requirements_file: requirements.yml
 
   playbook:
     name: Playbook
