--- a/roles/node/tasks/macos.yml
+++ b/roles/node/tasks/macos.yml
@@ -38,17 +38,17 @@
       when:
         - set_default_nodejs_ver|default(true)
 
-    - name: Get default nodejs version via fnm
-      ansible.builtin.shell:
-        cmd: |
-          set -o pipefail
-          eval "$(fnm env)"
-          fnm use {{ default_nodejs_version }} > /dev/null 2>&1
-          readlink -f $(command -v node) | sed  -E "s%/node$%%g"
-        executable: /bin/bash
-      register: default_nodejs_path_results
-      changed_when: false
+    # - name: Get default nodejs version via fnm
+    #   ansible.builtin.shell:
+    #     cmd: |
+    #       set -o pipefail
+    #       eval "$(fnm env)"
+    #       fnm use {{ default_nodejs_version }} > /dev/null 2>&1
+    #       readlink -f $(command -v node) | sed  -E "s%/node$%%g"
+    #     executable: /bin/bash
+    #   register: default_nodejs_path_results
+    #   changed_when: false
 
-    - name: Definde default_nodejs_path
-      set_fact:
-        default_nodejs_path: "{{ default_nodejs_path_results.stdout }}"
+    # - name: Definde default_nodejs_path
+    #   set_fact:
+    #     default_nodejs_path: "{{ default_nodejs_path_results.stdout }}"
