--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,18 +34,18 @@ jobs:
       - name: Set up the test environment.
         run: ansible-galaxy install -r requirements.yml
 
-      # - name: Test the playbook's syntax.
-      #   run: ansible-playbook bootstrap.yml --syntax-check
+      - name: Test the playbook's syntax.
+        run: ansible-playbook bootstrap.yml --syntax-check
 
       - name: Test the playbook.
-        run: ansible-playbook bootstrap.yml
+        run: ansible-playbook bootstrap.yml -t "homebrew,shell,node"
         env:
           ANSIBLE_FORCE_COLOR: "1"
 
       - name: Idempotence check.
         run: |
           idempotence=$(mktemp)
-          ansible-playbook bootstrap.yml | tee -a ${idempotence}
+          ansible-playbook bootstrap.yml -t "homebrew,shell,node" | tee -a ${idempotence}
           tail ${idempotence} | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)
         env:
           ANSIBLE_FORCE_COLOR: "1"
