--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
-- name: Installing Homebrew Formulas
-  import_tasks: install-formulas.yml
+- name: "Running Homebrew Tasks"
+  block:
+    - name: Installing Homebrew Formulas
+      import_tasks: install-formulas.yml
 
-- name: Installing Homebrew Casks
-  import_tasks: install-casks.yml
+    - name: Installing Homebrew Casks
+      import_tasks: install-casks.yml
