--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,72 @@
 ---
 brew_packages:
+  - act
+  - cosign
+  - diff-so-fancy
+  - fastfetch
+  - fnm
+  - fzf
   - git
+  - git-lfs
+  - iperf
+  - mas
+  - oh-my-posh
+  - openssl
+  - podman
+  - rclone
+  - ssh-copy-id
+  - starship
+  - stow
+  - zoxide
 
 brew_casks:
+  - appcleaner
+  - araxis-merge
+  - docker
+  - font-cascadia-code
+  - font-fira-code-nerd-font
+  - font-jetbrains-mono
+  - font-jetbrains-mono-nerd-font
   - ghostty
+  - google-chrome
+  - iina
+  - keka
+  - microsoft-auto-update
+  - microsoft-edge
+  - microsoft-teams
+  # - notchnook
+  - p4v
+  - podman-desktop
+  - postman
+  - tableplus
+  - tower
+  - transmission
+  - visual-studio-code
+  - vlc
+  - zoom
 
 mas_packages:
   - { name: "1Password for Safari", id: 1569813296 }
+  - { name: "Affinity Designer", id: 824171161 }
+  - { name: "Affinity Photo", id: 824183456 }
+  - { name: "Amphetamine", id: 937984704 }
+  - { name: "Bitdefender Virus Scanner", id: 500154009 }
+  - { name: "Craft", id: 1487937127 }
+  # - { name: "Keynote", id: 409183694 }
+  - { name: "Magnet", id: 441258766 }
+  # - { name: "Microsoft Excel", id: 462058435 }
+  # - { name: "Microsoft Word", id: 462054704 }
+  - { name: "Money", id: 1185488696 }
+  - { name: "Numbers", id: 409203825 }
+  - { name: "Pages", id: 409201541 }
+  # - { name: "Pixelmator Pro", id: 1289583905 }
+  # - { name: "Pixelmator", id: 407963104 }
+  - { name: "Playgrounds", id: 1496833156 }
+  - { name: "Reeder", id: 1529448980 }
+  - { name: "Slack", id: 803453959 }
+  # - { name: "The Unarchiver", id: 425424353 }
+  # - { name: "Twitter", id: 1482454543 }
+  - { name: "Xcode", id: 497799835 }
 
 nodejs_versions:
   - 22
