--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -27,3 +27,7 @@
       tags: [node]
     - role: mas
       tags: [mas]
+    - role: settings
+      tags: [settings]
+    - role: projects
+      tags: [projects]
