--- a/roles/node/tasks/install-packages.yml
+++ b/roles/node/tasks/install-packages.yml
@@ -5,4 +5,6 @@
     state: "{{ item.state | default('present') }}"
     version: "{{ item.version | default(omit) }}"
     global: true
+  environment:
+    PATH: "{{ fnm_default_nodejs_path }}:{{ ansible_env.PATH }}"
   loop: "{{ npm_packages }}"
