--- a/roles/node/tasks/install-node.yml
+++ b/roles/node/tasks/install-node.yml
@@ -35,3 +35,18 @@
     creates: "{{ ansible_env.HOME }}/.local/share/fnm/aliases/default/bin"
   when:
     - set_default_nodejs_ver|default(true)
+
+- name: Get default nodejs version via fnm
+  ansible.builtin.shell:
+    cmd: |
+      set -o pipefail
+      eval "$(fnm env)"
+      fnm use {{ default_nodejs_version }} > /dev/null 2>&1
+      readlink -f $(command -v node) | sed  -E "s%/node$%%g"
+    executable: /bin/bash
+  register: fnm_default_nodejs_path_results
+  changed_when: false
+
+- name: Define default_nodejs_path
+  set_fact:
+    fnm_default_nodejs_path: "{{ fnm_default_nodejs_path_results.stdout }}"
