--- a/roles/settings/tasks/dock.yml
+++ b/roles/settings/tasks/dock.yml
@@ -1,9 +1,27 @@
 ---
 - name: Set the icon size of Dock items to {{ dock_tilesize }}px.
   when: dock_tilesize != None
-  osx_defaults:
+  community.general.osx_defaults:
     domain: com.apple.dock
     key: tilesize
-    type: int
-    value: "{{ dock_tilesize }}"
+    type: float
+    value: "{{ dock_tilesize|int }}"
+  notify: Restart Dock
+
+- name: Set Dock Authohide to {{ dock_autohide }}.
+  when: dock_autohide != None
+  community.general.osx_defaults:
+    domain: com.apple.dock
+    key: autohide
+    type: bool
+    value: "{{ dock_autohide }}"
+  notify: Restart Dock
+
+- name: Set Dock position to {{ dock_position }}.
+  when: dock_position != None
+  community.general.osx_defaults:
+    domain: com.apple.dock
+    key: orientation
+    type: string
+    value: "{{ dock_position }}"
   notify: Restart Dock
