--- a/default.config.yml
+++ b/default.config.yml
@@ -1,135 +1,68 @@
 ---
 ####################################################################
-### Role: Settings
-
-# Hostname
-computername: GP’s MacBook Pro
-hostname: null
-
-# finder_proxy_icon_hover_delay: null
-
-# Safari
-# safari_show_full_url_in_address_bar: true
-safari_open_safe_files_automatically: false
-safari_show_status_bar: true
-safari_show_developer_menu: true
-
-# System
-system_save_application_state_on_quit: false
-system_expand_save_panel_by_default: true
-system_expand_print_panel_by_default: true
-system_show_file_extensions_warning: false
-system_warn_before_emptying_the_trash: true
-# system_use_f_keys_as_standard_function_keys: null
-system_index_network_storage_with_spotlight: false
-
-# Screen
-screensaver_ask_for_password: true
-screensaver_ask_for_password_in_seconds: 5
-
-# Dock
-dock_make_hidden_apps_translucent: true
-dock_show_indicator_lights_for_open_apps: true
-dock_tilesize: 40
-
-# Trackpad
-trackpad_tap_to_click: true
-
-# Ssh
-configure_ssh: true
-ssh_keys:
-  []
-  # - name: "example"
-  #   host: "example.com"
-  #   type: "ed25519"
-  #   comment: "some comment"
-  # - name: "gitlab"
-  #   host: "gitlab.com"
-  #   hostname: "username.gitlab.com"
-  #   type: "rsa"
-  #   comment: "some comment"
-
-####################################################################
 ### Role: Homebrew
 
-homebrew_taps:
-  - heroku/brew
-  - homebrew/cask
-  - homebrew/cask-fonts
-  - homebrew/core
-  - vapor/tap
+homebrew_taps: []
 
-homebrew_cask_appdir: /Applications
-homebrew_cask_apps:
+homebrew_casks:
+  - 1password
   - appcleaner
   - araxis-merge
-  # - bloomrpc
-  # - cleanmymac
-  # - daisydisk
   - docker
   - font-cascadia-code
   - font-fira-code-nerd-font
   - font-jetbrains-mono
+  - font-jetbrains-mono-nerd-font
+  - ghostty
   - google-chrome
-  - gpg-suite-no-mail
-  # - iina
-  # - imageoptim
-  # - insomnia
-  - iterm2
+  - iina
   - keka
-  # - knuff
   - microsoft-edge
-  # - navicat-premium
+  - microsoft-teams
   - ngrok
+  # - notchnook
   - p4v
-  # - parallels
+  - podman-desktop
   - postman
   - tableplus
-  # - temurin # Java
   - tower
   - transmission
   - visual-studio-code
-  # - visual-studio-code-insiders
   - vlc
-  # - vmware-fusion
-  # - xscope
-  # - zoom
+  - zoom
 
-homebrew_installed_packages:
-  # - ansible # Installed via Pip.
-  # - asdf
+homebrew_packages:
+  - act
   - cosign
   - diff-so-fancy
+  - fastfetch
   - fnm
+  - fzf
   - git
   - git-lfs
   # - gitlab-runner
-  # - helm
-  # - heroku
-  - httpie
-  - jq
-  # - minikube
+  - iperf
+  - mas
+  # - oh-my-posh
   - openssl
+  - podman
+  - rclone
   - ssh-copy-id
   - starship
-  - tree
-  - watchman
+  - stow
+  - zoxide
 
 ####################################################################
 ### Role: MAS
 
-mas_email: ""
-mas_password: ""
-mas_installed_apps:
-  # - { name: "1Password 7", id: 1333542190 }
+mas_packages:
   - { name: "1Password for Safari", id: 1569813296 }
-  # - { name: "Affinity Designer", id: 824171161 }
-  # - { name: "Affinity Photo", id: 824183456 }
-  # - { name: "Agenda", id: 1287445660 }
+  - { name: "Affinity Designer", id: 824171161 }
+  - { name: "Affinity Photo", id: 824183456 }
   - { name: "Amphetamine", id: 937984704 }
   - { name: "Bitdefender Virus Scanner", id: 500154009 }
   - { name: "Craft", id: 1487937127 }
-  - { name: "Keynote", id: 409183694 }
+  # - { name: "Keynote", id: 409183694 }
   - { name: "Magnet", id: 441258766 }
   # - { name: "Microsoft Excel", id: 462058435 }
   # - { name: "Microsoft Word", id: 462054704 }
@@ -141,7 +74,6 @@ mas_installed_apps:
   - { name: "Playgrounds", id: 1496833156 }
   - { name: "Reeder", id: 1529448980 }
   - { name: "Slack", id: 803453959 }
-  - { name: "Spark", id: 1176895641 }
   # - { name: "The Unarchiver", id: 425424353 }
   # - { name: "Twitter", id: 1482454543 }
   - { name: "Xcode", id: 497799835 }
@@ -149,24 +81,19 @@ mas_installed_apps:
 ####################################################################
 ### Role: Node
 
-node_manager: fnm
-node_version: 18.11.0
+nodejs_versions:
+  - 22
+  - 20
+
 npm_packages:
-  # - "@angular/cli"
-  # - "@electron-forge/cli"
-  # - "@maizzle/cli"
-  # - "@nestjs/cli"
   - autocannon
   - create-nx-workspace
   - depcheck
   - eslint
+  - knip
   - npm-check-updates
   - nx
-  # - oclif
-  - pnpm
   - prettier
-  # - verdaccio
-  - yarn
 
 ####################################################################
 ### Role: dotfiles
@@ -176,13 +103,9 @@ dotfiles_repo: https://github.com/gperdomor/dotfiles.git
 dotfiles_repo_version: main
 dotfiles_repo_accept_hostkey: true
 dotfiles_repo_local_destination: ~/Developer/dotfiles
-dotfiles_files:
-  # - .asdfrc
-  - .gitconfig
-  - .gitignore
-  - .npmrc
-  # - .tool-versions
-  - .zshrc
+
+####################################################################
+### Role: Projects
 
 projects:
   - dest: "macOS-ansible"
