--- a/roles/settings/defaults/main.yml
+++ b/roles/settings/defaults/main.yml
@@ -1,35 +1,16 @@
 ---
-# Hostname
-computername: null
-hostname: null
-
-# Safari
-safari_show_full_url_in_address_bar: null
-safari_open_safe_files_automatically: null
-safari_show_status_bar: null
-safari_show_developer_menu: null
-
-# System
-system_save_application_state_on_quit: null
-system_expand_save_panel_by_default: null
-system_expand_print_panel_by_default: null
-system_show_file_extensions_warning: null
-system_warn_before_emptying_the_trash: null
-system_use_f_keys_as_standard_function_keys: null
-system_index_network_storage_with_spotlight: null
-
-# Screen
-screensaver_ask_for_password: null
-screensaver_ask_for_password_in_seconds: null
-
-# Trackpad
-trackpad_tap_to_click: null
-
 # Dock
-dock_make_hidden_apps_translucent: null
-dock_show_indicator_lights_for_open_apps: null
-dock_tilesize: null
+dock_autohide: true
+dock_position: bottom
+dock_tilesize: 42
 
-# Ssh
-configure_ssh: false
-ssh_keys: []
+# Screenshots
+screenshot_location: ~/Pictures/screenshots
+screenshot_format: png
+screensaver_ask_for_password_in_seconds: 10
+
+# Finder
+finder_view_style: clmv
+finder_path_bar: true
+finder_status_bar: false
+finder_folder_on_top: true
